# pd-macambira

CVSROOT/: avail  cvs_acls  cvsignore  cvswrappers  loginfo
Framestein/: BUGS.txt  CHANGELOG.txt  README.txt  head.avi  toolbar.txt
Framestein/Filters/: BitLeft.8bf  BossTota.8bf  BubbSpac.8bf  ChloeMag.8bf  ColSteps.8bf  PicChop.8bf  README.txt  picasso.8bf  yage.8bf  zoomnoise.8bf
Framestein/Patches/: 00 example-basics.pd  00.example-basics.pd  01 example-video.pd  01.example-video.pd  02 example-docking.pd  02.example-docking.pd  03.example-docking2.pd  04 example-draganddrop.pd  04-02.example-draw-text.pd  04-03.example-draganddrop.pd  05.example-plugins.pd  06 example-photoshopfilters.pd  06.example-photoshopfilters.pd  07 example-blending.pd  08.example-masking.pd  09 example-sonogram.pd  09.example-sonogram.pd  10.example-waveformdisplay.pd  11 example-browser.pd  12 example-network.pd  12.example-network.pd  13 example-avioutput.pd  13.example-avioutput.pd  14 example-hist.pd  15.example-searchpath.pd  16 example-PeRColate.pd  16.example-PeRColate.pd  17 PixelPack HISTORY.txt  17 PixelPack README.txt  17-01 example-PixelPack.pd  17-01.example-PixelPack.pd  17-02 example-PixelPack-layermodes.pd  17-03.example-PixelPack-overview.pd  18 example-info-rgb-event.pd  18.example-rowca.pd  40.The_Harmon.pd  50 example-externals.pd  50.example-externals.pd  README.txt  arraysize.c  (+76 more)
Framestein/Plugins/: 2colors.cpp  2colors.exp  2colors.lib  README.txt  argument-passing.cpp  argument-passing.exp  argument-passing.lib  bend.c  bend.exp  bend.lib  black.c  black.exp  black.lib  cga.c  colortv.c  colortv.exp  colortv.lib  compare.c  constrain.c  convolution.c  copy_vert.c  copy_vert.exp  copy_vert.lib  cutout.c  darken.c  deinterlace.c  difference.c  eclipse.c  eclipse02.c  eclipse03.c  fader.cpp  fromage.c  fs2vf.c  fs2vf.exp  fs2vf.lib  gol.c  gol.exp  gol.lib  green.cpp  green.exp  (+72 more)
Framestein/Source/: Filez.pas  Framestein.cfg  Framestein.dof  Framestein.dpr  Framestein.dsk  Framestein.res  FramesteinLib.cfg  FramesteinLib.dof  FramesteinLib.dpr  FsAviWriter.pas  README.txt  Strz.pas  cleanup.bat  configureunit.dfm  configureunit.pas  dc.inc  effectsunit.pas  fsDcAvi.pas  fsaviunit.dfm  fsaviunit.pas  fsbrowserunit.dfm  fsbrowserunit.pas  fscopyunit.dfm  fscopyunit.pas  fsdrawunit.dfm  fsdrawunit.pas  fsformunit.pas  fsframeunit.dfm  fsframeunit.pas  fsinfounit.dfm  fsinfounit.pas  fsspeedbutton.pas  fstextunit.dfm  fstextunit.pas  logunit.dfm  logunit.pas  mainunit.dfm  mainunit.pas  pluginunit.pas  progressunit.dfm  (+4 more)
abstractions/: Makefile  Makefile.buildlayout  Makefile.dirs  README  TODO  Welcome.html  pd-abstractions.info
abstractions/La-kitchen/: autocal-help.pd  autocal.pd
abstractions/ds-gui/: ds-array.pd  ds-choice-list.pd  ds-designer-help.pd  ds-designer.pd  ds-slider-help.pd  ds-slider-o-help.pd  ds-slider-o.pd
abstractions/jmmmp/: -dsp-help.pd  LICENSE.txt  Makefile  ardourjack-gui.pd  array+.pd  array-edit.pd  bcf2000.pd  bezier-help.pd  bezier.pd  bezier~-help.pd  bezier~.pd  but-help.pd  but.pd  clock-help.pd  clock.pd  dacm~-help.pd  dacm~.pd  datei-l-help.pd  datei-o-help.pd  datei-o.pd  datei-r-help.pd  datei-r.pd  datei-w-help.pd  dsp01-help.pd  dsp01.pd  f+-help.pd  f+.pd  farben-data-s.pd  gui-edit.pd  jmmmp-ext.txt  jmmmp-meta.pd  lbang-help.pd  liner+~-help.pd  liner~-help.pd  m-i-help.pd  m-i.pd  maat~-help.pd  maat~.pd  mat~-help.pd  mat~.pd  (+27 more)
abstractions/keyboardkeys/: keyboard_main.pd  keys_help.pd
abstractions/mtl/: 1.mtlBrowser.pd  TODO  ambiTable4-help.pd  ambiTablePlay3~-help.pd  ambiThrow7~-help.pd  arpeggio-help.pd  aux~-help.pd  aux~.pd  browser.pd  buttonColor-help.pd  channel~-help.pd  cues.pd  (+99 more)
desiredata/: INSTALL.txt  LICENSE.txt  README.txt
desiredata/extra/: Makefile.am  hilbert~.pd  makefile
desiredata/extra/bonk~/: bonk~.c
desiredata/extra/expr~/: vexp.c  vexp.h
desiredata/extra/pureunity/: 3times.pd  4times.pd  ChangeLog  Makefile  README  arith-test.pd  associative-test.pd  associator.pd  commutative-test.pd  commutator.pd  comparators-test.pd  distributive-test.pd  distributor.pd  glue-test.pd  invertible-test.pd  invertor.pd  main.pd  norm.#.pd  norm.f.pd  op2.#.pd  op2.f.pd  operator1-rule.pd  packunpack3.#.pd  packunpack3.~.pd  partialorder-test.pd  partialordereq-test.pd  protocols-tree.pd  pureunity.c  rand.#.pd  rand.f.pd  rand.~.pd  swap.#.pd  swap.f.pd  tree.pd
desiredata/extra/pureunity/locale/: english.tcl
desiredata/extra/sigmund~/: sigmund~.c
doc/: Makefile  TODO  darwin_altpackage.pmsp  darwin_package.pmsp  font_sizes.pd  pd-doc.info
extensions/: Makefile  Makefile.buildlayout
htdocs/: bug-report.php  contact.html  contact.php  developer.html  developer.php  documentation.html  documentation.php  download.html  download.php  index.html  index.php  lastmodified.inc  lists.php  menu.inc  pd.css  pure-data.htm  quote.inc  subprojects.html  subprojects.php  trackers.php  upload  webring.inc
pd/: INSTALL.txt  README.txt  delme
pd/src/: CHANGELOG.txt  build.bat  configure  configure.in  configure.in.ok  configure.in.oops  configure.in.pa_v19  core.5452  core.5470  core.5487  d_arithmetic.c  d_array.c  d_ctl.c  d_dac.c  d_delay.c  d_fft.c  d_fftroutine.c  d_filter.c  d_global.c  d_math.c  d_mayer_fft.c  d_misc.c  d_osc.c  d_resample.c  d_soundfile.c  d_ugen.c  g_all_guis.c  g_all_guis.h  g_array.c  g_bang.c  g_canvas.c  g_canvas.h  g_editor.c  g_graph.c  g_guiconnect.c  g_hdial.c  g_hslider.c  g_io.c  g_mycanvas.c  g_numbox.c  (+88 more)
scripts/: automated-builder.sh  build-libs-for-pd-on-mingw.sh  check-for-type-punning-warnings.py  checkin-vanilla-release.sh  checkout-developer-layout.sh  config-switcher.sh  convert-help-to-standard.sh  download-pd-archives.sh  find-wish.app.sh  generate-libdir-metafile.sh  generate-pd-settings-files.sh  insert_declare.py  load_every_help.py  load_every_help.sh  load_every_object.sh  make-objectname-alias-symlinks.sh  move-patch-to-xy  nightly-build.sh  parse-help-patches.pl  pd  pd-diff  pd-mode.el  update-developer-layout.sh
supercollider/: README
xgui/: README.txt
(+2119 files in other folders)
